# diffusion-bc

./: eval.py
diffusion_policy/config/: diffusion_bc_workspace.yaml  train_diffusion_transformer_lowdim_workspace.yaml  train_diffusion_unet_lowdim_workspace.yaml
diffusion_policy/config/task/: raisim.yaml
diffusion_policy/dataset/: raisim_dataset.py
diffusion_policy/env/raisim/: CMakeLists.txt  raisim_env.py
diffusion_policy/env/raisim/gym_envs/anymal_velocity_command/: Environment.hpp  cfg.yaml
diffusion_policy/env/raisim/raisim/: Environment.hpp  VectorizedEnvironment.hpp  raisim_gym.cpp
diffusion_policy/env/raisim/raisim/helpers/: Observation.hpp
diffusion_policy/env/raisim/raisim_gym/env/: RaisimGymVecEnv.py  VectorizedEnvironment.hpp  raisim_gym.cpp
diffusion_policy/env_runner/: raisim_runner.py
diffusion_policy/model/diffusion/: diffusion_bc_transformer.py
diffusion_policy/policy/: diffusion_bc_policy.py  diffusion_transformer_lowdim_policy.py
diffusion_policy/workspace/: diffusion_bc_workspace.py  train_diffusion_transformer_lowdim_workspace.py  train_diffusion_unet_lowdim_workspace.py
scripts/: process_data.py  vis_data.py
